# kurs

./: 3_WEEK_PLAN.md  ACTUAL_DEVELOPMENT_PLAN.md  CMakeLists.txt  CONTENT_CREATION_PLAN.md  CURRENT_CODEBASE_STATUS.md  DAY0_FULL_CONTENT.cpp  DAY0_REMAINING_ENTRIES.cpp  DOCUMENTATION.md  EVENT_SYSTEM_INTEGRATION_PLAN.md  FEATURES_CATALOG.md  FINAL_CHECKLIST.md  FULL_DOCUMENTATION.md  FULL_PROJECT_IMPLEMENTATION_PLAN.md  GAME_SYSTEMS_DOCUMENTATION.md  INSTALLATION.md  JOURNAL_SYSTEM_ARCHITECTURE.md  MVP_ACTION_PLAN.md  MVP_CORE_DESIGN.md  MVP_FINAL_STATUS.md  MVP_FIXES_COMPLETE.md  MVP_SESSION_COMPLETE.md  MVP_TEST_INSTRUCTIONS.md  NEXT_SESSION_QUICK_START.md  PROJECT_STATUS.md  QUICK_START_IMPLEMENTATION.md  README.md  ROADMAP.md  RUSSIAN_CHARACTERS_AND_EVENTS.md  SFML3_MIGRATION_GUIDE.md  SFML3_MIGRATION_PLAN.md  SFML3_MIGRATION_STATUS.md  SIMPLIFIED_ARCHITECTURE_PLAN.md  TECHNICAL.md  TECHNICAL_ACTION_PLAN.md  TECHNICAL_DOCUMENTATION.md  UI_COMPONENTS_SPEC.md  _codeql_detected_source_root  ОТЧЕТ_7_СЛОЙНЫЙ_ПАРАЛЛАКС.md  ОТЧЕТ_ИСПРАВЛЕНИЕ_БАГОВ_ПЕРЕМЕЩЕНИЯ.md  ОТЧЕТ_О_ПРОДЕЛАННОЙ_РАБОТЕ.md
archive/: PHASE2_COMPLETION_SUMMARY.md
archive/analysis_reports/: CODE_STRUCTURE_ANALYSIS.md  NEXT_PHASE_PROMPT.md  NODESCENE_REFACTOR.md  QUICK_REFERENCE.md
archive/historical_reports/: ANALYSIS_SUMMARY.md  BRANCHING_STRATEGY.md  BRANCH_2_DYNAMIC_DIALOGUE_PROMPT.md  BUILD_FIX_NOTES.md  COMPLETE_FUNCTION_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  FONT_FIX_README.md  FUNCTIONAL_REPORT.md  IMPLEMENTATION_MASTER.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  NEXT_PHASE_PLAN.md  PHASE_4_VISUAL_SUMMARY.md  PROMPT_BRANCH_1_REFINEMENTS.md  PROMPT_BRANCH_2_PHASE4_UI_HUD.md  PROMPT_BRANCH_3_PHASE5_ABILITY_TREE.md  README_backup.md  UI_IMPLEMENTATION_PROMPT.md  UI_INTEGRATION_EXAMPLES.md  UI_SYSTEM_COMPLETION_REPORT.md  VISUAL_DIAGRAM.md
archive/specs_v2/: KEEP_DRIVING_IMPLEMENTATION_REPORT.md  MAP_V2.1_WEB_STRUCTURE.md  MAP_V2_CHANGES.md
archive/unused_scenes/: DrivingController.h  DrivingScene.h  RoadEventManager.h  RoadScene.h  SideViewScene.h
assets/cars/: moskvich.md  volga.md  zhiguli.md
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  kkurs
build_release/saves/: savegame.sav  savegame_backup_0.sav  savegame_backup_1.sav  savegame_backup_2.sav
build_release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
content/: day0.yaml
data/maps/: README.md  russia_90s_map.json  test_map.json
docs/: 8_CORE_PRINCIPLES.md  ABILITY_TREE_SYSTEM.md  ABILITY_TREE_TECHNICAL_SPEC.md  ABILITY_TREE_UI_PIPBOY.md  ABILITY_TREE_VISUALIZATION.md  PROMPT_TEMPLATE.md  README.md  REPOSITORY_CLEANUP_PLAN.md  RESOURCE_PRESERVATION_SYSTEM.md  REST_AND_CHARGES_SYSTEM.md  TESTING_GUIDE.md  TEST_ENV_IMPLEMENTATION_SUMMARY.md  TEST_ENV_PLAN.md  UPDATE_SUMMARY.md  agent_dialogue_log.md  asset_requests.md
docs/archive/: ANALYSIS_README.md  ANALYSIS_SUMMARY.md  DESIGN_CLARIFICATIONS.md  EVENT_DIALOGUE_INTEGRATION.md  GAPS_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROMPT_TEMPLATE.md  REFACTORING_SUMMARY.md  REPOSITORY_ANALYSIS.md  SECURITY_ANALYSIS.md  SECURITY_SUMMARY.md  progress.md  task-tech.md  tasks.md  tech.md
docs/tasks/: TEMPLATE.md  (+6 more)
images/: Acknowledgements.rtf  D3DMetal  Frameworks  GStreamer.framework  Info.plist  LICENSE  Logs  MacOS  PkgInfo  Policy.html  Public  QuickSFV.ini  Read Me.rtf  Resources  SharedSupport  Sikarugir  SikarugirSdk.framework  _Redist  ambience.kdr  banter.kdr  bgs.kdr  bgs_old.kdr  controllerblacklist.csv  controllertypes.csv  data.win  default.metallib  definitions.kdr  dialogue.kdr  drive_c  endings.kdr  enemies.kdr  enemies_old.kdr  event_cards.kdr  events.kdr  exploration.kdr  fitgirl.md5  hitchhikers.kdr  hitchhikers_old.kdr  input_license.txt  introspections.kdr  (+155 more)
include/: AbilityEffectManager.h  AbilityNode.h  AbilityTreeScene.h  AbilityTreeSystem.h  AbilityTypes.h  Car.h  Character.h  CharacterCreationMenu.h  CharacterCreationScene.h  CharacterScene.h  CinematicEventScene.h  CompanionsScene.h  DialogueManager.h  DialogueScene.h  EndGameScene.h  EventBus.h  EventFactory.h  EventHelper.h  EventManager.h  ExampleResponsiveScene.h  ExperienceSystem.h  FontLoader.h  FuelSystem.h  GameOverScene.h  GameState.h  GameStateManager.h  GameTypes.h  GarageService.h  GridInventorySystem.h  InteractionMenu.h  InventoryScene.h  InventorySystem.h  Item.h  Location.h  LocationGenerator.h  LocationScene.h  MainMenuScene.h  MainSceneOverlay.h  MapScene.h  MotelScene.h  (+29 more)
saves/: savegame.sav  savegame_backup_0.sav  savegame_backup_1.sav  savegame_backup_2.sav  savegame_backup_3.sav
scripts/: README.md  build.sh  clean.sh  run.sh  run_all_tests.sh  run_unit_tests.sh  test.sh
src/: AbilityEffectManager.cpp  AbilityNode.cpp  AbilityTreeScene.cpp  AbilityTreeSystem.cpp  Car.cpp  Character.cpp  CharacterCreationMenu.cpp  CharacterCreationScene.cpp  CharacterScene.cpp  CinematicEventScene.cpp  CompanionsScene.cpp  DialogueManager.cpp  EndGameScene.cpp  EventFactory.cpp  EventManager.cpp  ExperienceSystem.cpp  FuelSystem.cpp  GameStateManager.cpp  GameTypes.cpp  GridInventorySystem.cpp  InventoryScene.cpp  InventorySystem.cpp  LocationScene.cpp  MainMenuScene.cpp  MapScene.cpp  MotelScene.cpp  NPC.cpp  NodeScene.cpp  NotesScene.cpp  PlayerState.cpp  QuestManager.cpp  QuestsScene.cpp  ResourceEventSystem.cpp  RestScene.cpp  SaveSystem.cpp  SceneManager.cpp  Structure.cpp  TravelCinematicScene.cpp  TravelSelectionScene.cpp  main.cpp
tests/: CMakeLists.txt  README.md  test_AbilityNode.cpp  test_AbilityTreeSystem.cpp  test_companion_system.cpp  test_conditional_choices.cpp  test_day0_complete.cpp  test_full_system_integration.cpp  test_helpers.h  test_out_of_fuel.cpp
tests/mocks/sfml/: README.md
tests/mocks/sfml/SFML/: Graphics.hpp  System.hpp  Window.hpp
tests/unit/: test_game_state_manager.cpp  test_npc_dialogue.cpp  test_phase4_scenes.cpp  test_phase4_scenes_improved.cpp  test_quest_manager.cpp  test_sanity.cpp  test_save_system.cpp  test_ui.cpp
(+90 files in other folders)
